# Troth_giza

./: .gitignore  README.md  giza_datasets.ipynb  pyproject.toml  sktime_predict_stock.ipynb
models/rf_giza/inference/: Scarb.toml
notebooks/: predict_eth_price.ipynb  tsai-test.ipynb
verifiable_tg_bot/: bot_helpers.py  main.py  price_forecaster.py
verifiable_tg_bot/actions/: action.py  alternate_bot.py  async_action.py  async_bot.py  price_forecaster.py  tg_bot_action.py
