[tool.poetry]
name = "verifiable-tg-bot"
version = "0.1.0"
description = ""
authors = ["Gabriel Fior <fior.gbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-telegram-bot = "^20.8"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
pandas = ">=1.1, <2.2.0"
prophet = "^1.1.5"
pycoingecko = "^3.1.0"
giza-datasets = "^0.1.1"
polars = "^0.20.7"
onnx2json = "^2.0.4"
onnx = "^1.15.0"
json2onnx = "^2.0.3"
sktime = "^0.26.0"
llvmlite = "^0.42.0"
seaborn = "^0.13.2"
tsai = "^0.3.9"
skl2onnx = "^1.16.0"



[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
